@@ -26,6 +26,8 @@
 	  Studio. Fixed some errors in the shape class conversion in ES.
 	* actorio.cc: Monsters that can't die are forced to have at least 1hp when
 	  the game is loaded (fixes bug #2641856).
+	* Make NPCs more aggressive about fighting back, and added more cases where
+	  invisible NPCs join the fight (fixes bug #2641154).
 
 2009-02-26	Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* Fixed bug #2638479.
